# youtube-downloader

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  build.bat  dev_start.py  download_ffmpeg.py  package.json  run_tests.bat  start_app.bat  start_production.bat  利用上の注意.txt
.github/: dependabot.yml
.github/workflows/: release.yml  update-yt-dlp.yml
backend/: app.py  gunicorn_config.py  pyproject.toml  requirements.txt  static_server.py  test_app.py  webview_app.py
backend/api/: routes.py
backend/core/: config.py  downloader.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  integration.test.tsx
frontend/src/test/: setup.ts
frontend/src/test/mocks/: mui-icons.js
