[project]
name = "youtube-downloader-backend"
version = "0.1.0"
description = "Backend API for YouTube Downloader"
authors = [{ name = "Developer", email = "action@github.com" }]
requires-python = ">=3.10"
dependencies = [
    "Flask==3.0.3",
    "Flask-CORS==6.0.2",
    "pywebview>=5.0.0",
    "requests",
    "waitress",
    "yt-dlp==2025.9.26"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyinstaller"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
